<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.passionatecrew.nopainnogain.PauseActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDeBase"
        android:src="@drawable/sablier" />

    <TextView
        android:id="@+id/typeExo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repos"
        android:layout_marginTop="@dimen/marginDeBase"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDeBase"
        android:text="@string/tpsR" />

    <EditText
        android:id="@+id/editTextRepPause"
        android:ems="10"
        android:layout_marginTop="@dimen/marginDeBase"
        android:enabled="false"
        android:layout_width="@dimen/longueurChamp"
        android:layout_height="@dimen/hauteurChamp"
        android:inputType="time"
        android:gravity="center"
        android:text="@string/trenteSec" >

        <requestFocus />
    </EditText>

</LinearLayout>
