<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDeBase"
        android:layout_marginLeft="@dimen/hauteurChamp"
        android:text="@string/nomseance"
        android:textSize="@dimen/tailleTexteLegende"/>

    <EditText
        android:id="@+id/EditTextNom"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nom"
        android:layout_marginLeft="60sp"
        android:layout_toEndOf="@+id/nom"
        android:inputType="text|textCapWords"
        android:onClick="@string/btnDemarrer" />

	<RadioGroup
	    android:id="@+id/radioGroupObj"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/EditTextNom"
	    android:layout_below="@id/EditTextNom" >
	
	    <RadioButton
	        android:id="@+id/radioButtonPuissance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/objectif"
	        android:layout_alignBottom="@+id/objectif"
	        android:layout_alignLeft="@+id/EditTextNom"
	        android:onClick="@string/btnDemarrer"
	        android:text="RadioButton" />
	
	    <RadioButton
	        android:id="@+id/radioButtonRenforcement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/radioButtonMasse"
	        android:layout_below="@+id/radioButtonMasse"
	        android:onClick="@string/btnDemarrer"
	        android:text="RadioButton" />
	
	    <RadioButton
	        android:id="@+id/radioButtonMasse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/radioButtonPuissance"
	        android:layout_below="@+id/radioButtonPuissance"
	        android:onClick="@string/btnDemarrer"
	        android:text="RadioButton" />
	</RadioGroup>
	
	<TextView
	    android:id="@+id/objectif"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/radioGroupObj"
	    android:layout_alignLeft="@+id/nom"
	    android:layout_marginBottom="36dp"
	    android:text="@string/objectif"
	    android:textSize="@dimen/tailleTexteLegende"/>

</RelativeLayout>
